<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>MsgUI2</groupId>
  <artifactId>MsgUI2</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>
  
  <properties>
  	<message-store-version>1.0.0-SNAPSHOT</message-store-version>
  	<spring.version>[4.3.18,)</spring.version> <!-- 4.1.7.RELEASE last release supports AopUtils.isCglibProxyClass() -->
  	<java.version>1.8</java.version>
  	<mysql.connector.version>[8.0.16,)</mysql.connector.version>
  	<aopalliance.version>1.0</aopalliance.version>
  	<aspectjrt.version>1.8.9</aspectjrt.version>
  	<commons-digester.version>2.1</commons-digester.version>
  	<commons-fileupload.version>[1.3.3,)</commons-fileupload.version>
  	<commons-logging.version>1.2</commons-logging.version>
  	<jstl.version>1.2</jstl.version>
  	<javax.mail.version>1.4.7</javax.mail.version>
  	<faces-api.version>2.2</faces-api.version>
  	<javax.faces-version>1.2-20</javax.faces-version>
  	<jsf-version>2.2.14</jsf-version>
  	<tomee.version>1.7.4</tomee.version>
  	<mockito-version>1.10.19</mockito-version>
  </properties>
  
  <dependencies>
  	<dependency>
		<groupId>jpa.test</groupId>
		<artifactId>message-store</artifactId>
		<version>${message-store-version}</version>
  	</dependency>
  	<dependency>
  		<groupId>mysql</groupId>
  		<artifactId>mysql-connector-java</artifactId>
  		<version>${mysql.connector.version}</version>
  	</dependency>
  	<dependency>
  		<groupId>aopalliance</groupId>
  		<artifactId>aopalliance</artifactId>
  		<version>${aopalliance.version}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-context-support</artifactId>
  		<version>${spring.version}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-expression</artifactId>
  		<version>${spring.version}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-instrument-tomcat</artifactId>
  		<version>${spring.version}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-test</artifactId>
  		<version>${spring.version}</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-web</artifactId>
  		<version>${spring.version}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.aspectj</groupId>
  		<artifactId>aspectjrt</artifactId>
  		<version>${aspectjrt.version}</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-digester</groupId>
  		<artifactId>commons-digester</artifactId>
  		<version>${commons-digester.version}</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>commons-fileupload</groupId>
  		<artifactId>commons-fileupload</artifactId>
  		<version>${commons-fileupload.version}</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-logging</groupId>
  		<artifactId>commons-logging</artifactId>
  		<version>${commons-logging.version}</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>jstl</groupId>
  		<artifactId>jstl</artifactId>
  		<version>${jstl.version}</version>
  	</dependency>
  	<dependency>
  		<groupId>javax.mail</groupId>
  		<artifactId>mail</artifactId>
  		<version>${javax.mail.version}</version>
  		<scope>provided</scope>
  	</dependency>
  	
	<dependency>
		<groupId>javax.faces</groupId>
		<artifactId>javax.faces-api</artifactId>
		<version>${faces-api.version}</version>
		<scope>provided</scope>
	</dependency>
	
	<!-- 
	<dependency>
	    <groupId>javax.faces</groupId>
	    <artifactId>jsf-api</artifactId>
	    <version>${javax.faces-version}</version>
	</dependency>
	
	<dependency>
	    <groupId>javax.faces</groupId>
	    <artifactId>jsf-impl</artifactId>
	    <version>${javax.faces-version}</version>
	</dependency>
	 -->
	
	<!-- Apache TomEE comes with myfaces -->
	<dependency>
		<groupId>com.sun.faces</groupId>
		<artifactId>jsf-api</artifactId>
		<version>${jsf-version}</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>com.sun.faces</groupId>
		<artifactId>jsf-impl</artifactId>
		<version>${jsf-version}</version>
		<scope>provided</scope>
	</dependency>
	
	<dependency>
	    <groupId>org.mockito</groupId>
	    <artifactId>mockito-all</artifactId>
	    <version>${mockito-version}</version>
	    <scope>test</scope>
	</dependency>
	
	
	<dependency>
		<groupId>org.apache.openejb</groupId>
		<artifactId>tomee-embedded</artifactId>
		<version>${tomee.version}</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>org.apache.openejb</groupId>
		<artifactId>tomee-jaxrs</artifactId>
		<version>${tomee.version}</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>org.apache.openejb</groupId>
		<artifactId>tomee-webservices</artifactId>
		<version>${tomee.version}</version>
		<scope>provided</scope>
	</dependency>
	
  </dependencies>
  
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <excludes>
          <exclude>**/*.java</exclude>
          <exclude>**/*.txt</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <warSourceDirectory>WebContent</warSourceDirectory>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>